--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -70,6 +70,34 @@ limitations under the License.
         />
       </div>
 
+      @if (form.controls.switchToMeteringPointIDs.value) {
+        <div class="items-group">
+          <watt-textarea-field
+            [formControl]="form.controls.meteringPointIDs"
+            [label]="t('meteringPointIDsLabel')"
+          >
+            <watt-field-hint>{{ t("meteringPointIDsHintOne") }}</watt-field-hint>
+            <watt-field-hint>{{
+              t("meteringPointIDsHintTwo", { maxIDs: maxIDs })
+            }}</watt-field-hint>
+
+            @if (form.controls.meteringPointIDs.hasError("invalidMeteringPointIDs")) {
+              <watt-field-error>{{ t("invalidMeteringPointIDs") }}</watt-field-error>
+            }
+
+            @if (form.controls.meteringPointIDs.hasError("maxMeteringPointIDsExceeded")) {
+              <watt-field-error>{{
+                t("maxMeteringPointIDsExceeded", {
+                  maxIDs: maxIDs,
+                  currentNumber: normalizeMeteringPointIDs(form.controls.meteringPointIDs.value)
+                    .length,
+                })
+              }}</watt-field-error>
+            }
+          </watt-textarea-field>
+        </div>
+      }
+
       @if (showEnergySupplierDropdown && form.controls.energySupplier) {
         <div class="items-group">
           <watt-dropdown
@@ -88,7 +116,7 @@ limitations under the License.
           [label]="t('measurementResolution')"
           [showResetOption]="false"
           [formControl]="form.controls.resolution"
-          [options]="resolutionOptions"
+          [options]="resolutionOptions()"
         />
       </div>
     </vater-flex>
