--- a/libs/watt/package/table/watt-table.component.scss
+++ b/libs/watt/package/table/watt-table.component.scss
@@ -74,12 +74,12 @@ watt-table .mat-mdc-table {
     padding: var(--watt-space-s) var(--watt-space-m);
   }
 
-  td.mat-mdc-footer-cell,
+  td.mat-mdc-footer-cell:not(.watt-table-footer-spacer),
   tr.mdc-data-table__row:last-child .mat-mdc-cell {
     border-bottom: 1px solid var(--watt-color-neutral-grey-300);
   }
 
-  td.mat-mdc-footer-cell {
+  td.mat-mdc-footer-cell:not(.watt-table-footer-spacer) {
     @include watt.typography-watt-headline-6;
     border-top: 2px solid var(--watt-color-neutral-grey-300);
     background-color: var(--watt-color-neutral-grey-100);
