--- a/libs/dh/reports/feature-measurements-reports/src/components/overview/overview.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/overview/overview.component.html
@@ -27,27 +27,7 @@ limitations under the License.
     <ng-container
       *wattTableCell="columns['meteringPoints']; header: t('columns.meteringPoints'); let entry"
     >
-      @let meteringPointTypes = entry.meteringPointTypes;
-
-      @if (meteringPointTypes.length < 4) {
-        @for (meteringPointType of meteringPointTypes; let last = $last; track $index) {
-          @if (last) {
-            {{ "meteringPointType." + meteringPointType | transloco }}
-          } @else {
-            {{ "meteringPointType." + meteringPointType | transloco }},
-          }
-        }
-      } @else {
-        @let first = "meteringPointType." + meteringPointTypes[0] | transloco;
-        @let second = "meteringPointType." + meteringPointTypes[1] | transloco;
-
-        {{
-          t("itemsAndCount", {
-            items: first + ", " + second,
-            remainingCount: meteringPointTypes.length - 2,
-          })
-        }}
-      }
+      <dh-metering-point-cell [entry]="entry" />
     </ng-container>
 
     <ng-container *wattTableCell="columns['gridAreas']; header: t('columns.gridAreas'); let entry">
