--- a/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
@@ -51,7 +51,7 @@ limitations under the License.
   </mat-menu>
 
   <watt-data-filters>
-    <dh-calculations-filters [initial]="filter()" (filter)="filter.set($event)" />
+    <dh-calculations-filters [initial]="filter()" (filter)="fetch($event)" />
   </watt-data-filters>
 
   <watt-table
