fix(dh): adjustments to measurements reports

--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -89,6 +89,10 @@ limitations under the License.
             </watt-field-hint>
           }
         </watt-dropdown>
+
+        <watt-checkbox [formControl]="form.controls.allowLargeTextFiles">
+          {{ t("allowLargeTextFiles") }}
+        </watt-checkbox>
       </div>
 
       <div class="items-group">
