--- a/libs/dh/reports/feature-measurements-reports/src/components/overview/overview.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/overview/overview.component.html
@@ -33,19 +33,21 @@ limitations under the License.
     <ng-container *wattTableCell="columns['gridAreas']; header: t('columns.gridAreas'); let entry">
       @let gridAreas = entry.gridAreaCodes;
 
-      @if (gridAreas.length > 0) {
-        @if (gridAreas.length < 4) {
-          {{ gridAreas.join(", ") }}
+      @if (entry.meteringPointIds == null) {
+        @if (gridAreas.length > 0) {
+          @if (gridAreas.length < 4) {
+            {{ gridAreas.join(", ") }}
+          } @else {
+            {{
+              t("itemsAndCount", {
+                items: gridAreas.slice(0, 2).join(", "),
+                remainingCount: gridAreas.length - 2,
+              })
+            }}
+          }
         } @else {
-          {{
-            t("itemsAndCount", {
-              items: gridAreas.slice(0, 2).join(", "),
-              remainingCount: gridAreas.length - 2,
-            })
-          }}
+          {{ t("noData") }}
         }
-      } @else {
-        {{ t("noData") }}
       }
     </ng-container>
 
