Navigate to list on closed drawer

--- a/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
@@ -22,7 +22,7 @@ limitations under the License.
     [key]="loadedMarketParticipant?.id"
     [loading]="isLoading()"
     #drawer
-    (closed)="closed.emit()"
+    (closed)="closed()"
     [size]="drawerSize()"
   >
     <watt-drawer-topbar>
