--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -41,11 +41,19 @@ limitations under the License.
     </ng-container>
   }
 
+  <ng-container [matColumnDef]="'__expandable__'">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let row" (click)="_onRowClick(row)">
+      <watt-icon name="right" size="xs" />
+    </td>
+  </ng-container>
+
   @for (column of columns | keyvalue; track column.key) {
     <ng-container [matColumnDef]="column.key" [stickyEnd]="column.value.stickyEnd?.()">
       <th
         mat-header-cell
         *matHeaderCellDef
+        [class.watt-table-cell--expandable]="column.value.expandable"
         class="watt-table-align-{{ column.value.align ?? 'left' }} {{
           column.value.headerCellClass
         }}"
@@ -66,15 +74,20 @@ limitations under the License.
           <watt-icon [title]="tooltip" name="info" />
         }
       </th>
+
       <td
         mat-cell
         *matCellDef="let row"
+        [class.watt-table-cell--expandable]="column.value.expandable"
         class="watt-table-align-{{ column.value.align ?? 'left' }} {{ column.value.dataCellClass }}"
+        (click)="!column.value.expandable && _onRowClick(row)"
       >
         @if (_getColumnTemplate(column.value); as template) {
-          <div>
-            <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
-          </div>
+          @defer (when !column.value.expandable || _isActiveRow(row)) {
+            <div>
+              <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
+            </div>
+          }
         } @else {
           {{ _getColumnCell(column, row) }}
         }
@@ -105,7 +118,6 @@ limitations under the License.
     mat-row
     *matRowDef="let row; columns: _getColumns()"
     [attr.aria-selected]="row === activeRow"
-    (click)="_onRowClick(row)"
     [ngClass]="{
       'watt-table-highlight-row': !disabled && !suppressRowHoverHighlight,
       'watt-table-clickable-row': !disabled && rowClick.observed,
