--- a/libs/watt/package/table/watt-table.component.scss
+++ b/libs/watt/package/table/watt-table.component.scss
@@ -179,8 +179,9 @@ watt-table .mat-mdc-table tr.mat-mdc-row td.mat-mdc-cell.watt-table-cell--expand
   background: transparent;
   flex: 1 1 auto;
   opacity: 0;
+  will-change: opacity;
   transition:
-    opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 0.2s linear,
     overflow 0s 0.3s allow-discrete;
 
   & > .watt-table-cell-wrapper {
