--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -22,7 +22,12 @@ limitations under the License.
   <form id="request-measurements-report-form" [formGroup]="form" (ngSubmit)="submit()">
     <vater-flex direction="column" gap="l">
       <div class="items-group">
-        <watt-datepicker [range]="true" [label]="t('period')" [formControl]="form.controls.period">
+        <watt-datepicker
+          [range]="true"
+          [label]="t('period')"
+          [formControl]="form.controls.period"
+          data-testid="measurementreport.period"
+        >
           @if (form.controls.period.hasError("maxDays")) {
             <watt-field-error>
               {{ t("maxDays") }}
@@ -42,7 +47,10 @@ limitations under the License.
           }
         </watt-datepicker>
 
-        <watt-checkbox [formControl]="form.controls.switchToMeteringPointIDs">
+        <watt-checkbox
+          [formControl]="form.controls.switchToMeteringPointIDs"
+          data-testid="measurementreport.switchToMeteringPointIds"
+        >
           {{ t("switchToMeteringPointIDs") }}
         </watt-checkbox>
       </div>
@@ -52,6 +60,7 @@ limitations under the License.
           <watt-textarea-field
             [formControl]="form.controls.meteringPointIDs"
             [label]="t('meteringPointIDsLabel')"
+            data-testid="measurementreport.meteringPointIds"
           >
             <watt-field-hint>{{ t("meteringPointIDsHintOne") }}</watt-field-hint>
             <watt-field-hint>{{
@@ -82,6 +91,7 @@ limitations under the License.
           [label]="t('gridArea')"
           [formControl]="form.controls.gridAreas"
           [options]="gridAreaOptions()"
+          data-testid="measurementreport.gridAreas"
         >
           @if (multipleGridAreasSelected()) {
             <watt-field-hint>
@@ -90,7 +100,10 @@ limitations under the License.
           }
         </watt-dropdown>
 
-        <watt-checkbox [formControl]="form.controls.allowLargeTextFiles">
+        <watt-checkbox
+          [formControl]="form.controls.allowLargeTextFiles"
+          data-testid="measurementreport.allowLargeTextFiles"
+        >
           {{ t("allowLargeTextFiles") }}
         </watt-checkbox>
       </div>
@@ -103,6 +116,7 @@ limitations under the License.
           [multiple]="true"
           [formControl]="form.controls.meteringPointTypes"
           [options]="meteringPointTypesOptions"
+          data-testid="measurementreport.meteringPointTypes"
         />
       </div>
 
@@ -113,6 +127,7 @@ limitations under the License.
             [showResetOption]="false"
             [formControl]="form.controls.energySupplier"
             [options]="energySupplierOptions()"
+            data-testid="measurementreport.energySupplier"
           />
         </div>
       }
@@ -125,18 +140,22 @@ limitations under the License.
           [showResetOption]="false"
           [formControl]="form.controls.resolution"
           [options]="resolutionOptions()"
+          data-testid="measurementreport.resolution"
         />
       </div>
     </vater-flex>
   </form>
 
   <watt-modal-actions>
-    <watt-button variant="secondary" (click)="modal.close(false)">{{ t("cancel") }}</watt-button>
+    <watt-button variant="secondary" (click)="modal.close(false)" data-testid="cancelButton">
+      {{ t("cancel") }}
+    </watt-button>
 
     <watt-button
       type="submit"
       formId="request-measurements-report-form"
       [loading]="submitInProgress()"
+      data-testid="submitButton"
     >
       {{ t("confirm") }}
     </watt-button>
