--- a/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-report-modal.component.html
@@ -31,6 +31,7 @@ limitations under the License.
           [label]="t('period')"
           [max]="maxDate"
           [formControl]="form.controls.period"
+          data-testid="settlementreport.period"
         >
           @if (form.controls.period.hasError("startDateAndEndDateHaveDifferentMonth")) {
             <watt-field-error>
@@ -40,7 +41,10 @@ limitations under the License.
         </watt-datepicker>
 
         @if (showMonthlySumCheckbox$ | push) {
-          <watt-checkbox [formControl]="form.controls.includeMonthlySum">
+          <watt-checkbox
+            [formControl]="form.controls.includeMonthlySum"
+            data-testid="settlementreport.includeMonthlySum"
+          >
             {{ t("includeMonthlySum") }}
           </watt-checkbox>
         }
@@ -53,6 +57,7 @@ limitations under the License.
           [label]="t('gridArea')"
           [formControl]="form.controls.gridAreas"
           [options]="gridAreaOptions$ | push"
+          data-testid="settlementreport.gridAreas"
         >
           @if (multipleGridAreasSelected$ | push) {
             <watt-field-hint>
@@ -62,12 +67,18 @@ limitations under the License.
         </watt-dropdown>
 
         @if (multipleGridAreasSelected$ | push) {
-          <watt-checkbox [formControl]="form.controls.combineResultsInOneFile">
+          <watt-checkbox
+            [formControl]="form.controls.combineResultsInOneFile"
+            data-testid="settlementreport.combineResultsInOneFile"
+          >
             {{ t("combineResultsInOneFile") }}
           </watt-checkbox>
         }
 
-        <watt-checkbox [formControl]="form.controls.allowLargeTextFiles">
+        <watt-checkbox
+          [formControl]="form.controls.allowLargeTextFiles"
+          data-testid="settlementreport.allowLargeTextFiles"
+        >
           {{ t("allowLargeTextFiles") }}
         </watt-checkbox>
       </div>
@@ -79,6 +90,7 @@ limitations under the License.
             [showResetOption]="false"
             [formControl]="form.controls.energySupplier"
             [options]="energySupplierOptions$ | push"
+            data-testid="settlementreport.energySupplier"
           />
         </div>
       }
@@ -91,9 +103,13 @@ limitations under the License.
           [options]="calculationTypeOptions"
           translateKey="reports.settlementReports.calculationTypes"
           dhDropdownTranslator
+          data-testid="settlementreport.calculationType"
         />
 
-        <watt-checkbox [formControl]="form.controls.includeBasisData">
+        <watt-checkbox
+          [formControl]="form.controls.includeBasisData"
+          data-testid="settlementreport.includeBasisData"
+        >
           {{ t("includeBasisData") }}
         </watt-checkbox>
       </div>
@@ -101,12 +117,15 @@ limitations under the License.
   </form>
 
   <watt-modal-actions>
-    <watt-button variant="secondary" (click)="modal.close(false)">{{ t("cancel") }}</watt-button>
+    <watt-button variant="secondary" (click)="modal.close(false)" data-testid="cancelButton">
+      {{ t("cancel") }}
+    </watt-button>
 
     <watt-button
       type="submit"
       formId="request-settlement-report-form"
       [loading]="submitInProgress()"
+      data-testid="submitButton"
     >
       {{ t("confirm") }}
     </watt-button>
