--- a/libs/watt/package/tabs/watt-tabs.component.scss
+++ b/libs/watt/package/tabs/watt-tabs.component.scss
@@ -17,7 +17,7 @@ watt-drawer {
   watt-tabs {
     .mat-mdc-tab-group,
     .mat-mdc-tab-body-wrapper {
-      height: auto;
+      height: 100%;
     }
   }
 }
