--- a/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
+++ b/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
@@ -16,7 +16,7 @@ limitations under the License.
 -->
 @let message = balanceResponsibleMessage();
 <watt-drawer
-  *transloco="let t; read: 'eSett.balanceResponsible.shared'"
+  *transloco="let t; prefix: 'eSett.balanceResponsible.shared'"
   #drawer
   [autoOpen]="true"
   [key]="message?.id"
