Fallback to auto

--- a/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
+++ b/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
@@ -76,7 +76,7 @@ limitations under the License.
     <watt-drawer-content>
       <vater-flex fill="vertical">
         @defer (on viewport) {
-          <watt-code [code]="xmlMessage.value()" />
+          <watt-code [code]="xmlMessage.value()" language="xml" />
         } @placeholder {
           <watt-spinner />
         }
