--- a/libs/dh/esett/feature-outgoing-messages/src/lib/details.component.html
+++ b/libs/dh/esett/feature-outgoing-messages/src/lib/details.component.html
@@ -103,7 +103,7 @@ limitations under the License.
             }}</watt-button>
           </vater-stack>
 
-          <watt-code [code]="responseDocument.value()" />
+          <watt-code [code]="responseDocument.value()" language="xml" />
         </watt-tab>
       }
     </watt-tabs>
