--- a/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/details/details.component.html
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/details/details.component.html
@@ -81,7 +81,7 @@ limitations under the License.
           </vater-flex>
           <vater-flex fill="vertical">
             @defer (on viewport) {
-              <watt-code [code]="xmlMessage.value()" />
+              <watt-code [code]="xmlMessage.value()" language="xml" />
             } @placeholder {
               <watt-spinner />
             }
