--- a/libs/dh/esett/feature-outgoing-messages/src/lib/table.component.html
+++ b/libs/dh/esett/feature-outgoing-messages/src/lib/table.component.html
@@ -15,7 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <watt-data-table
-  *transloco="let t; read: 'eSett.outgoingMessages'"
+  *transloco="let t; prefix: 'eSett.outgoingMessages'"
   vater
   inset="ml"
   [searchLabel]="t('filters.documentId')"
