--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -56,7 +56,7 @@ limitations under the License.
   </watt-data-actions>
 
   <watt-table
-    *transloco="let resolveHeader; read: 'devExamples.processes.table.columns'"
+    *transloco="let resolveHeader; prefix: 'devExamples.processes.table.columns'"
     [dataSource]="dataSource"
     [columns]="columns"
     [loading]="dataSource.loading"
