--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -41,11 +41,27 @@ limitations under the License.
     </ng-container>
   }
 
+  <ng-container [matColumnDef]="_expandableColumn">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td
+      #td
+      mat-cell
+      *matCellDef="let row; let index = index"
+      [attr.data-key]="_getRowKey(index, row)"
+      [attr.data-row-index]="index"
+      (click)="_onRowClick(row)"
+      [class.watt-table-cell--expanded]="expanded().includes(row)"
+    >
+      <watt-icon name="right" size="xs" />
+    </td>
+  </ng-container>
+
   @for (column of columns | keyvalue; track column.key) {
     <ng-container [matColumnDef]="column.key" [stickyEnd]="column.value.stickyEnd?.()">
       <th
         mat-header-cell
         *matHeaderCellDef
+        [class.watt-table-cell--expandable]="column.value.expandable"
         class="watt-table-align-{{ column.value.align ?? 'left' }} {{
           column.value.headerCellClass
         }}"
@@ -66,17 +82,36 @@ limitations under the License.
           <watt-icon [title]="tooltip" name="info" />
         }
       </th>
+
       <td
+        #td
         mat-cell
-        *matCellDef="let row"
+        *matCellDef="let row; let index = index"
+        [attr.data-key]="_getRowKey(index, row)"
+        [attr.data-row-index]="index"
+        [class.watt-table-cell--expanded]="expanded().includes(row)"
+        [class.watt-table-cell--expandable]="column.value.expandable"
         class="watt-table-align-{{ column.value.align ?? 'left' }} {{ column.value.dataCellClass }}"
+        (click)="!column.value.expandable && _onRowClick(row)"
       >
-        @if (_getColumnTemplate(column.value); as template) {
-          <div>
-            <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
-          </div>
+        @if (_isExpandable()) {
+          @defer (when !column.value.expandable || expanded().includes(row)) {
+            @if (_getColumnTemplate(column.value); as template) {
+              <div class="watt-table-cell-wrapper">
+                <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
+              </div>
+            } @else {
+              {{ _getColumnCell(column, row) }}
+            }
+          }
         } @else {
-          {{ _getColumnCell(column, row) }}
+          @if (_getColumnTemplate(column.value); as template) {
+            <div class="watt-table-cell-wrapper">
+              <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
+            </div>
+          } @else {
+            {{ _getColumnCell(column, row) }}
+          }
         }
       </td>
 
@@ -105,7 +140,6 @@ limitations under the License.
     mat-row
     *matRowDef="let row; columns: _getColumns()"
     [attr.aria-selected]="row === activeRow"
-    (click)="_onRowClick(row)"
     [ngClass]="{
       'watt-table-highlight-row': !disabled && !suppressRowHoverHighlight,
       'watt-table-clickable-row': !disabled && rowClick.observed,
