--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -14,18 +14,22 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<watt-data-table
-  vater
-  inset="ml"
-  *transloco="let t; prefix: 'marketParticipant.gridAreas'"
-  [searchLabel]="t('searchLabel')"
-  [error]="dataSource.error"
-  [ready]="dataSource.called"
->
-  <h3>{{ t("topBarTitle") }}</h3>
+<watt-card vater inset="ml" *transloco="let t; read: 'marketParticipant.gridAreas'">
+  <vater-flex fill="vertical" gap="m">
+    <vater-stack direction="row" gap="s">
+      <h3>{{ t("topBarTitle") }}</h3>
+      <span class="watt-chip-label">{{ dataSource.data.length }}</span>
 
-  <watt-data-filters>
-    <vater-stack direction="row" gap="m" align="start">
+      <vater-spacer />
+
+      <watt-search [label]="'shared.search' | transloco" (search)="search($event)" />
+
+      <watt-button icon="download" variant="text" (click)="download()">{{
+        "shared.download" | transloco
+      }}</watt-button>
+    </vater-stack>
+
+    <vater-stack direction="row" align="start" gap="m">
       <watt-dropdown
         sortDirection="asc"
         dhDropdownTranslator
@@ -43,50 +47,63 @@ limitations under the License.
         [options]="gridAreaStatusOptions"
         [multiple]="true"
         [chipMode]="true"
-        [(ngModel)]="selectedGridAreaStatuses"
+        [(ngModel)]="selectedGridAreaStatus"
         [placeholder]="t('statusTypePlaceholder')"
       />
     </vater-stack>
-  </watt-data-filters>
 
-  <watt-data-actions>
-    <watt-button icon="download" variant="text" (click)="download()">{{
-      "shared.download" | transloco
-    }}</watt-button>
-  </watt-data-actions>
+    <vater-flex fill="vertical" scrollable>
+      <watt-table
+        [columns]="columns"
+        [dataSource]="dataSource"
+        aria-label="gridAreas"
+        sortBy="code"
+        sortDirection="asc"
+        [loading]="isLoading()"
+        [activeRow]="activeRow()"
+        (rowClick)="activeRow.set($event)"
+      >
+        <ng-container *wattTableCell="columns['code']; header: t('columns.code'); let gridArea">
+          {{ gridArea.code }}
+        </ng-container>
 
-  <watt-table
-    *transloco="let resolveHeader; prefix: 'marketParticipant.gridAreas.columns'"
-    [dataSource]="dataSource"
-    [columns]="columns"
-    [loading]="dataSource.loading"
-    [resolveHeader]="resolveHeader"
-    [activeRow]="selection()"
-    (rowClick)="navigation.navigate('details', $event.id)"
-  >
-    <ng-container *wattTableCell="columns.code; let gridArea">
-      {{ gridArea.code }}
-    </ng-container>
+        <ng-container *wattTableCell="columns['actor']; header: t('columns.actor'); let gridArea">
+          {{ gridArea.actor }}
+        </ng-container>
 
-    <ng-container *wattTableCell="columns.actor; let gridArea">
-      {{ gridArea.actor }}
-    </ng-container>
+        <ng-container
+          *wattTableCell="columns['organization']; header: t('columns.organization'); let gridArea"
+        >
+          {{ gridArea.organization }}
+        </ng-container>
 
-    <ng-container *wattTableCell="columns.organizationName; let gridArea">
-      {{ gridArea.organizationName }}
-    </ng-container>
+        <ng-container
+          *wattTableCell="columns['priceArea']; header: t('columns.priceArea'); let gridArea"
+        >
+          {{ gridArea.priceArea }}
+        </ng-container>
 
-    <ng-container *wattTableCell="columns.priceAreaCode; let gridArea">
-      {{ gridArea.priceAreaCode }}
-    </ng-container>
+        <ng-container *wattTableCell="columns['type']; header: t('columns.type'); let gridArea">
+          {{ t("types." + gridArea.type) }}
+        </ng-container>
 
-    <ng-container *wattTableCell="columns.type; let gridArea">
-      {{ t("types." + gridArea.type) }}
-    </ng-container>
+        <ng-container *wattTableCell="columns['status']; header: t('columns.status'); let gridArea">
+          <dh-gridarea-status-badge [status]="gridArea.status" />
+        </ng-container>
+      </watt-table>
 
-    <ng-container *wattTableCell="columns.status; let gridArea">
-      <dh-gridarea-status-badge [status]="gridArea.status" />
-    </ng-container>
-  </watt-table>
-</watt-data-table>
-<router-outlet />
+      @if (!isLoading() && (hasError() || dataSource.data.length === 0)) {
+        <vater-stack fill="vertical" justify="center">
+          <watt-empty-state
+            [icon]="hasError() ? 'custom-power' : 'cancel'"
+            [title]="hasError() ? t('error') : t('noGridAreas')"
+          />
+        </vater-stack>
+      }
+    </vater-flex>
+
+    <watt-paginator [for]="dataSource" [pageSize]="100" />
+  </vater-flex>
+</watt-card>
+
+<dh-grid-area-details [gridAreaId]="activeRow()?.id" (closed)="activeRow.set(undefined)" />
