--- a/libs/dh/imbalance-prices/src/components/details/details.component.html
+++ b/libs/dh/imbalance-prices/src/components/details/details.component.html
@@ -36,7 +36,7 @@ limitations under the License.
     </watt-drawer-heading>
 
     <watt-drawer-actions>
-      <watt-button icon="download" variant="secondary" (click)="downloadCSV(url())">
+      <watt-button icon="download" variant="secondary" (click)="downloadCSV()">
         {{ "shared.download" | transloco }}
       </watt-button>
     </watt-drawer-actions>
