refactor(dh): use correct directive input

--- a/libs/dh/admin/feature-user-management/src/lib/invite/invite.component.html
+++ b/libs/dh/admin/feature-user-management/src/lib/invite/invite.component.html
@@ -19,7 +19,7 @@ limitations under the License.
   [loading]="loading()"
   [title]="t('title')"
   [disableEscAndBackdropClose]="true"
-  *transloco="let t; read: 'admin.userManagement.inviteUser'"
+  *transloco="let t; prefix: 'admin.userManagement.inviteUser'"
 >
   <watt-stepper
     class="watt-modal-content--full-width"
