fix(dh): fix user invitation (#4673)

--- a/libs/dh/admin/feature-user-management/src/lib/invite/invite.component.html
+++ b/libs/dh/admin/feature-user-management/src/lib/invite/invite.component.html
@@ -74,7 +74,7 @@ limitations under the License.
       [stepControl]="userInfo"
       [previousButtonLabel]="t('email')"
       [nextButtonLabel]="t('addUserRole')"
-      [enabled]="!emailExists() && inOrganizationMailDomain()"
+      [enabled]="!doesUserExist() && inOrganizationMailDomain()"
     >
       <form [formGroup]="userInfo" class="userInfoForm">
         <watt-text-field
