--- a/libs/dh/metering-point/feature-overview/src/components/move-in/dh-move-in.component.html
+++ b/libs/dh/metering-point/feature-overview/src/components/move-in/dh-move-in.component.html
@@ -66,7 +66,7 @@ limitations under the License.
         </vater-stack>
 
         @if (customerDetailsForm.controls.customerType.value === "private") {
-          @if (customerDetailsForm.controls.privateCustomer != undefined) {
+          @if (customerDetailsForm.controls.privateCustomer !== undefined) {
             <watt-text-field
               [label]="t('steps.customerDetails.name1')"
               class="name"
@@ -92,7 +92,7 @@ limitations under the License.
             />
           }
         } @else {
-          @if (customerDetailsForm.controls.businessCustomer != undefined) {
+          @if (customerDetailsForm.controls.businessCustomer !== undefined) {
             <watt-text-field
               [label]="t('steps.customerDetails.companyName')"
               class="name"
