--- a/libs/dh/admin/feature-user-management/src/lib/details/tabs/audit-logs.component.html
+++ b/libs/dh/admin/feature-user-management/src/lib/details/tabs/audit-logs.component.html
@@ -14,46 +14,37 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<watt-card variant="solid" *transloco="let t; read: 'admin.userManagement.tabs.history'">
-  <watt-card-title>
-    <h4>
-      @if (dataSource.totalCount === 1) {
-        {{ t("changesSingular", { auditLogCount: dataSource.totalCount }) }}
-      } @else {
-        {{ t("changesPlural", { auditLogCount: dataSource.totalCount }) }}
-      }
-    </h4>
-  </watt-card-title>
-  @if (!hasError()) {
-    <watt-table
-      [columns]="columns"
-      [dataSource]="dataSource"
-      sortBy="timestamp"
-      [loading]="isLoading()"
-      sortDirection="desc"
-      [sortClear]="false"
+<watt-data-table
+  vater
+  inset="0"
+  variant="solid"
+  *transloco="let t; prefix: 'admin.userManagement.tabs.history'"
+  [enableSearch]="false"
+  [enablePaginator]="false"
+  [count]="
+    dataSource().totalCount === 1
+      ? t('changesSingular', { auditLogCount: dataSource().totalCount })
+      : t('changesPlural', { auditLogCount: dataSource().totalCount })
+  "
+  [error]="hasError()"
+  [ready]="ready()"
+>
+  <watt-table
+    [columns]="columns"
+    [dataSource]="dataSource()"
+    sortBy="timestamp"
+    [loading]="isLoading()"
+    sortDirection="desc"
+    [sortClear]="false"
+  >
+    <ng-container
+      *wattTableCell="columns.timestamp; header: t('table.columns.timestamp'); let element"
     >
-      <ng-container
-        *wattTableCell="columns.timestamp; header: t('table.columns.timestamp'); let element"
-      >
-        {{ element.timestamp | wattDate: "long" }}
-      </ng-container>
+      {{ element.timestamp | wattDate: "long" }}
+    </ng-container>
 
-      <ng-container *wattTableCell="columns.entry; header: t('table.columns.entry'); let element">
-        <span [innerHTML]="t('logs.audit.' + element.change, element)"> </span>
-      </ng-container>
-    </watt-table>
-
-    @if (dataSource.totalCount === 0) {
-      <h4 class="no-results-text">
-        {{ t("table.noEntries") }}
-      </h4>
-    }
-  } @else {
-    <watt-empty-state
-      icon="custom-power"
-      [title]="'shared.error.title' | transloco"
-      [message]="'shared.error.message' | transloco"
-    />
-  }
-</watt-card>
+    <ng-container *wattTableCell="columns.entry; header: t('table.columns.entry'); let element">
+      <span [innerHTML]="t('logs.audit.' + element.change, element)"> </span>
+    </ng-container>
+  </watt-table>
+</watt-data-table>
